# academic-rag-typesense

./: .gitignore  LICENSE  RAG__Dev_Pract.ipynb  README.md  info.txt  main.py  pyproject.toml  requirements.txt
data/vector_store/c17b3835-e3ea-437c-acb3-81672b480ce7/: index_metadata.pickle
