[project]
name = "rag-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "ipykernel>=7.1.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.1",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
    "typesense>=1.3.0",
]
